[package]
name = "learning-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.5"
yew = { version = "0.20.0", features = ["csr"] }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
